--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base64-arraybuffer": "^0.1.5",
+    "bcrypt": "^0.8.6",
     "bluebird": "^3.4.0",
+    "co": "^4.6.0",
+    "is-generator": "^1.0.3",
+    "joi": "^8.4.1",
     "lodash": "^4.13.1",
     "seneca": "^2.1.0",
     "seneca-amqp-transport": "^0.2.2",
