--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "co": "^4.6.0",
     "is-generator": "^1.0.3",
     "joi": "^8.4.1",
+    "koa": "^1.2.0",
+    "koa-router": "^5.4.0",
     "lodash": "^4.13.1",
     "seneca": "^2.1.0",
     "seneca-amqp-transport": "^0.2.2",
